--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = [
 build-backend = "hatchling.build"
 
 [project]
-name = "kfazi-yapf"
-version = "0.1.0"
+name = "py-consistent-formatter"
+version = "0.2.0"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
@@ -20,7 +20,7 @@ dependencies = [
 ]
 
 [project.scripts]
-kfazi-yapf = "kfazi_yapf.__main__:main"
+py-consistent-formatter = "py_consistent_formatter.__main__:main"
 
 [tool.hatch.envs.default]
 dependencies = [
@@ -34,5 +34,5 @@ exclude = [
 
 [tool.hatch.build.targets.wheel]
 packages = [
-    "kfazi_yapf"
+    "py_consistent_formatter"
 ]
