--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,5 +12,14 @@ jobs:
       id-token: write
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.8
+    - name: Install hatch
+      run: pip install -U hatch
+    - name: Build
+      run: hatch build
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
