--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 -   id: format-python-code
     name: Format python code
     description: Format python code using yapf, isort and docformatter.
-    entry: kfazi-yapf
+    entry: py-consistent-formatter
     language: python
     types: [python]
