--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
 dependencies = [
     "yapf~=0.40",
     "isort~=7.0",
-    "docformatter~=1.7",
+    "docformatter @ git+https://github.com/PyCQA/docformatter@d9ace1fdef5d2c164ee7284fa07a63f8ead48682",  # Use direct reference as there is no release that supports Python 3.14
     "tokenize_rt~=6.0",
 ]
 dynamic = ["version"]
@@ -23,6 +23,9 @@ dynamic = ["version"]
 [tool.hatch.version]
 source = "code"
 path = "scripts/version.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true  # Required by docformatter
 
 [project.scripts]
 py-consistent-formatter = "py_consistent_formatter.__main__:main"
